# routes/index.js
@@ -7,5 +7,6 @@ router.get('/', (req, res) => {
 });
 
 router.use('/users', require('./users'));
+router.use('/tasks', require('./tasks'));
 
 module.exports = router;
