# routes/tasks.js
@@ -1,0 +1,13 @@
+const express = require('express');
+
+const router = express.Router();
+
+const tasksController = require('../controllers/tasks');
+
+router.get('/', tasksController.getAllTasks);
+router.get('/:id', tasksController.getTaskById);
+router.post('/', tasksController.createTask);
+router.put('/:id', tasksController.updateTask);
+router.delete('/:id', tasksController.deleteTask);
+
+module.exports = router;
